src/FinancialForce Accounting/objects/codaTransactionLineItem__c.object
<CustomObject>
    <customHelpPage>codahelptransaction</customHelpPage>
    <description>The line items on a transaction.</description>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountRollup__c</fullName>
        <formula>IF( ISNULL( Transaction__r.Account__c ), &apos;False&apos;, &apos;True&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTradingCurrencyMismatch__c</fullName>
        <formula>AccountCurrency__r.Name  &lt;&gt;  Account__r.CODAAccountTradingCurrency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Trading Currency Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <formula>IF( Account__r.CODAIntercompanyAccount__c, &apos;Intercompany&apos;, IF(Account__r.CODAAccountsPayableControl__c = Account__r.CODAAccountsReceivableControl__c, &apos;Customer - Vendor&apos;, IF(Account__r.CODAAccountsPayableControl__c =  GeneralLedgerAccount__c , &apos;Vendor&apos;, IF ( Account__r.CODAAccountsReceivableControl__c = GeneralLedgerAccount__c, &apos;Customer&apos;, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountValue__c</fullName>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Reclassify Profits field is updated accordingly.</inlineHelpText>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsOfAgeBand__c</fullName>
        <formula>IF( 
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand1Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand1Max__c
), 
$Setup.AsOfAgingReportSettings__c.AgeBand1Label__c,

IF( 
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand2Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand2Max__c
),
$Setup.AsOfAgingReportSettings__c.AgeBand2Label__c,

IF( 
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand3Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand3Max__c
),
$Setup.AsOfAgingReportSettings__c.AgeBand3Label__c,

IF(
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand4Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand4Max__c
),
$Setup.AsOfAgingReportSettings__c.AgeBand4Label__c,

IF(
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand5Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand5Max__c
),
$Setup.AsOfAgingReportSettings__c.AgeBand5Label__c,

IF(
OR( 
ISNULL( $Setup.AsOfAgingReportSettings__c.AgeBand6Max__c ),
AsOfAge__c &lt;= $Setup.AsOfAgingReportSettings__c.AgeBand6Max__c
),
$Setup.AsOfAgingReportSettings__c.AgeBand6Label__c,

null
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsOfAge__c</fullName>
        <formula>AsOfDate__c - IF( $Setup.AsOfAgingReportSettings__c.AgeByDueDate__c, DueDate__c, Transaction__r.TransactionDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As of Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AsOfDualValue__c</fullName>
        <label>As of Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsOfHomeValue__c</fullName>
        <label>As of Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AsOfName__c</fullName>
        <label>As of Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Bank Account Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsBankAccountCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankReconciliationStatus__c</fullName>
        <formula>IF( ISNULL( DateCanceled__c ), TEXT(BankReconciliation__r.ReconciliationStatus__c), &apos;Canceled&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Reconciliation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashFlowCategory__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Category field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Cash Flow Adjustable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CashFlowLineSummary__c</fullName>
        <inlineHelpText>Edit this field if you want to override the GLA default for this transaction line item. The Report Cash Flow Line Summary field is updated accordingly.</inlineHelpText>
        <label>Cash Flow Line Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(Gain) / Loss on Foreign Exchange</fullName>
                </value>
                <value>
                    <fullName>(Gain) / Loss on Investment Disposals</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Inventory</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Other Current Assets</fullName>
                </value>
                <value>
                    <fullName>(Increase) / Decrease in Receivables</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Depreciation &amp; Amortization</fullName>
                </value>
                <value>
                    <fullName>Dividends on Common Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends on Preference Shares</fullName>
                </value>
                <value>
                    <fullName>Dividends Received</fullName>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Common Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Employment Creditors</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Payables</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Preference Capital</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
                </value>
                <value>
                    <fullName>Increase / (Decrease) in Tax Liability</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Purchase of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Purchase of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sale of Investment Securities</fullName>
                </value>
                <value>
                    <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCanceled__c</fullName>
        <label>Date Canceled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOverdue__c</fullName>
        <formula>IF(TODAY() - DueDate__c&lt;0,0,TODAY() - DueDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 1 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension1Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension1Value__c</fullName>
        <label>Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 2 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension2Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2Value__c</fullName>
        <label>Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Dimension 3 Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsDimension3Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3Value__c</fullName>
        <label>Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscountAccountValue1__c</fullName>
        <label>Discount Account Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountAccountValue2__c</fullName>
        <label>Discount Account Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountAccountValue3__c</fullName>
        <label>Discount Account Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountDate1__c</fullName>
        <label>Discount Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountDate2__c</fullName>
        <label>Discount Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountDate3__c</fullName>
        <label>Discount Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountValue1__c</fullName>
        <label>Discount Document Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountValue2__c</fullName>
        <label>Discount Document Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountValue3__c</fullName>
        <label>Discount Document Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDocumentCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingValue__c</fullName>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Document Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTaxTotal__c</fullName>
        <formula>DocumentTaxValue1__c + DocumentTaxValue2__c + DocumentTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTaxValue1__c</fullName>
        <label>Document Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTaxValue2__c</fullName>
        <label>Document Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTaxValue3__c</fullName>
        <label>Document Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTaxableValue__c</fullName>
        <label>Document Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsDualCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The due date on matchable lines</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Expense)</relationshipLabel>
        <relationshipName>TransactionLineItemsExpense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsGeneralLedgerCurr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountValue__c</fullName>
        <label>General Ledger Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (General Ledger Account)</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipName>TransactionLineItemsHomeCurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeOutstandingValue__c</fullName>
        <description>See note 1</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeTaxTotal__c</fullName>
        <formula>HomeTaxValue1__c + HomeTaxValue2__c + HomeTaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeTaxValue1__c</fullName>
        <label>Home Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeTaxValue2__c</fullName>
        <label>Home Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeTaxValue3__c</fullName>
        <label>Home Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeTaxableValue__c</fullName>
        <label>Home Taxable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsOutputVATTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox identifies the tax line type i.e. Input VAT Tax or Output VAT Tax</description>
        <label>Is Output VAT Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineReference__c</fullName>
        <label>Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LocalGLACurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA Currency)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLACurrency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalGLAValue__c</fullName>
        <label>Local GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Proposed Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalAccount__c</fullName>
        <label>Original Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwningCurrencyRevaluation__c</fullName>
        <description>The ID of the Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwningDualCurrencyRevaluation__c</fullName>
        <description>The ID of the Dual Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Dual Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportAdjustOperatingActivities__c</fullName>
        <formula>if(isblank(text(CashFlowCategory__c)), GeneralLedgerAccount__r.AdjustOperatingActivities__c,AdjustOperatingActivities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportCashFlowCategory__c</fullName>
        <formula>if(isblank(text(CashFlowCategory__c)), text(GeneralLedgerAccount__r.CashFlowCategory__c), text(CashFlowCategory__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportCashFlowLineSummary__c</fullName>
        <formula>if(isblank(text(CashFlowCategory__c)), text(GeneralLedgerAccount__r.CashFlowLineSummary__c), text(CashFlowLineSummary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Line Summary</label>
        <type>Text</type>
    </fields>
</CustomObject>